# rtc_trans

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cal_psnr.py  cmake_install.cmake  demo  demo_yec  recorder.cpp  recorderall  recorderall.cpp  sender_frame.txt  src_dst_detla.py  test.cpp  trans.cpp  webrtc.h
psnr_rtc_1/: gop.txt  gop1_psnr.txt  gop2_psnr.txt  gop3_psnr.txt  gop4_psnr.txt  receiver_frame.txt  vp8_gop1.webm  vp8_gop2.webm  vp8_gop4.webm
psnr_rtc_2/: gop.txt  gop2_psnr.txt  receiver_frame.txt  sender_frame.txt  vp8_gop1.webm
